EDA (Belum jadi)

--- a/damri_article.ipynb
+++ b/damri_article.ipynb
@@ -1,39 +1,11 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "id": "4fa18410",
+   "cell_type": "markdown",
+   "id": "020ec0b6",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Collecting beautifulsoup4\n",
-      "  Downloading beautifulsoup4-4.14.2-py3-none-any.whl.metadata (3.8 kB)\n",
-      "Requirement already satisfied: requests in c:\\users\\hilice\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (2.32.5)\n",
-      "Collecting soupsieve>1.2 (from beautifulsoup4)\n",
-      "  Downloading soupsieve-2.8-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Requirement already satisfied: typing-extensions>=4.0.0 in c:\\users\\hilice\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from beautifulsoup4) (4.12.2)\n",
-      "Requirement already satisfied: charset_normalizer<4,>=2 in c:\\users\\hilice\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests) (3.4.3)\n",
-      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\hilice\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests) (3.10)\n",
-      "Requirement already satisfied: urllib3<3,>=1.21.1 in c:\\users\\hilice\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests) (2.5.0)\n",
-      "Requirement already satisfied: certifi>=2017.4.17 in c:\\users\\hilice\\appdata\\local\\programs\\python\\python313\\lib\\site-packages (from requests) (2025.8.3)\n",
-      "Downloading beautifulsoup4-4.14.2-py3-none-any.whl (106 kB)\n",
-      "Downloading soupsieve-2.8-py3-none-any.whl (36 kB)\n",
-      "Installing collected packages: soupsieve, beautifulsoup4\n",
-      "\n",
-      "   -------------------- ------------------- 1/2 [beautifulsoup4]\n",
-      "   -------------------- ------------------- 1/2 [beautifulsoup4]\n",
-      "   ---------------------------------------- 2/2 [beautifulsoup4]\n",
-      "\n",
-      "Successfully installed beautifulsoup4-4.14.2 soupsieve-2.8\n"
-     ]
-    }
-   ],
    "source": [
-    "!pip install beautifulsoup4 requests"
+    "<h3><b>1. Scrapping Data 50x3 Artikel</b></h3>\n"
    ]
   },
   {
@@ -41,7 +13,20 @@
    "execution_count": null,
    "id": "c8f486b4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n",
+      "\n",
+      "[notice] A new release of pip is available: 24.2 -> 25.2\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
+     ]
+    }
+   ],
    "source": [
     "# Install necessary libraries (if not already installed)\n",
     "!pip install beautifulsoup4 requests pandas -q\n",
@@ -112,6 +97,88 @@
     "# Save the DataFrame to a CSV file (optional)\n",
     "df.to_csv('data/scraped_articles.csv', index=False)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ecd8b1fe",
+   "metadata": {},
+   "source": [
+    "<h3><b>2. Lakukan EDA untuk Dataset Scraping</b></h3>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "167b3605",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "!pip install pandas matplotlib seaborn nltk\n",
+    "!pip install Sastrawi"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "788dc822",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from collections import Counter\n",
+    "import nltk\n",
+    "import string\n",
+    "\n",
+    "nltk.download('stopwords')\n",
+    "from nltk.corpus import stopwords\n",
+    "\n",
+    "import re\n",
+    "from Sastrawi.Stemmer.StemmerFactory import StemmerFactory\n",
+    "from Sastrawi.StopWordRemover.StopWordRemoverFactory import StopWordRemoverFactory\n",
+    "from nltk.stem import WordNetLemmatizer\n",
+    "import nltk\n",
+    "nltk.download('wordnet')\n",
+    "nltk.download('omw-1.4')\n",
+    "\n",
+    "\n",
+    "# Create stemmer and lemmatizer objects\n",
+    "factory = StemmerFactory()\n",
+    "stemmer = factory.create_stemmer()\n",
+    "lemmatizer = WordNetLemmatizer()\n",
+    "\n",
+    "def clean_text(text):\n",
+    "    # Case lowering\n",
+    "    text = text.lower()\n",
+    "\n",
+    "    # Punctuation removal\n",
+    "    text = re.sub(r'[^\\w\\s]', '', text)\n",
+    "\n",
+    "    # Stemming\n",
+    "    text = stemmer.stem(text)\n",
+    "\n",
+    "    # Lemmatization (requires a part-of-speech tag for optimal results, using 'v' for verb as a default)\n",
+    "    words = text.split()\n",
+    "    lemmatized_words = [lemmatizer.lemmatize(word, 'v') for word in words]\n",
+    "    text = ' '.join(lemmatized_words)\n",
+    "\n",
+    "    return text\n",
+    "\n",
+    "# Apply the cleaning function to the 'review' column\n",
+    "df['cleaned_review'] = df['content'].apply(clean_text)\n",
+    "\n",
+    "# Display the DataFrame with the cleaned reviews\n",
+    "print(df_jknrev[['review', 'cleaned_review']])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b558e231",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -130,7 +197,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.7"
+   "version": "3.12.6"
   }
  },
  "nbformat": 4,
